scripts/install_hadoop_hbase.sh: auto-configuration for hadoop 0.20.0 and hbase-0.20.0-alpha